v7.3.4 - economy transaction persistence and policy foundation