@@ -1,5 +1,6 @@
 package ru.rpgcore.core.economy;
 
+import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 
 import java.util.ArrayList;
@@ -8,28 +9,34 @@ import java.util.List;
 import java.util.Objects;
 
 /**
- * In-memory transaction foundation for economy operations.
- *
- * IMPORTANT:
- * - This is the first foundation layer, not final persistent banking history.
- * - It provides a unified record format and simple runtime storage.
- * - Later it can be moved to SavedData / per-player history / guild treasury logs.
+ * Persistent transaction service for economy operations.
  */
 public final class RpgEconomyTransactionService {
 
     private static final int MAX_HISTORY = 500;
-    private static final List<RpgEconomyTransaction> HISTORY = new ArrayList<>();
 
     private RpgEconomyTransactionService() {}
 
+    private static RpgEconomyTransactionSavedData getData(ServerLevel level) {
+        Objects.requireNonNull(level);
+
+        return level.getDataStorage().computeIfAbsent(
+                RpgEconomyTransactionSavedData::load,
+                RpgEconomyTransactionSavedData::new,
+                RpgEconomyTransactionSavedData.DATA_NAME
+        );
+    }
+
     public static void record(
+            ServerLevel level,
             RpgTransactionType type,
             String sourceId,
             String targetId,
             long amount,
             String reason
     ) {
-        Objects.requireNonNull(type, "type");
+        Objects.requireNonNull(level);
+        Objects.requireNonNull(type);
 
         RpgEconomyTransaction tx = new RpgEconomyTransaction(
                 System.currentTimeMillis(),
@@ -40,10 +47,12 @@ public final class RpgEconomyTransactionService {
                 reason == null ? "" : reason
         );
 
-        HISTORY.add(tx);
+        RpgEconomyTransactionSavedData data = getData(level);
 
-        if (HISTORY.size() > MAX_HISTORY) {
-            HISTORY.remove(0);
+        data.add(tx);
+
+        while (data.size() > MAX_HISTORY) {
+            data.removeFirst();
         }
     }
 
@@ -55,6 +64,7 @@ public final class RpgEconomyTransactionService {
             String reason
     ) {
         record(
+                source.serverLevel(),
                 type,
                 playerId(source),
                 playerId(target),
@@ -70,6 +80,7 @@ public final class RpgEconomyTransactionService {
             String reason
     ) {
         record(
+                player.serverLevel(),
                 type,
                 playerId(player),
                 "",
@@ -78,26 +89,70 @@ public final class RpgEconomyTransactionService {
         );
     }
 
-    public static List<RpgEconomyTransaction> recent() {
-        return List.copyOf(HISTORY);
+    /* =========================
+       HISTORY API
+       ========================= */
+
+    public static List<RpgEconomyTransaction> getRecent(ServerLevel level) {
+        return List.copyOf(getData(level).transactions());
     }
 
-    public static List<RpgEconomyTransaction> recentReversed() {
-        List<RpgEconomyTransaction> copy = new ArrayList<>(HISTORY);
-        Collections.reverse(copy);
-        return copy;
+    public static List<RpgEconomyTransaction> getRecent(ServerLevel level, int limit) {
+
+        List<RpgEconomyTransaction> all = getData(level).transactions();
+
+        int size = all.size();
+
+        if (size <= limit) {
+            return List.copyOf(all);
+        }
+
+        return List.copyOf(all.subList(size - limit, size));
     }
 
-    public static void clearAll() {
-        HISTORY.clear();
+    public static List<RpgEconomyTransaction> getPlayerHistory(ServerLevel level, String playerId) {
+
+        List<RpgEconomyTransaction> result = new ArrayList<>();
+
+        for (RpgEconomyTransaction tx : getData(level).transactions()) {
+
+            if (playerId.equals(tx.sourceId()) || playerId.equals(tx.targetId())) {
+                result.add(tx);
+            }
+        }
+
+        return result;
     }
 
-    public static int size() {
-        return HISTORY.size();
+    public static List<RpgEconomyTransaction> getPlayerHistory(ServerPlayer player) {
+
+        String id = playerId(player);
+
+        return getPlayerHistory(player.serverLevel(), id);
     }
 
+    public static List<RpgEconomyTransaction> getPlayerHistory(ServerPlayer player, int limit) {
+
+        List<RpgEconomyTransaction> history = getPlayerHistory(player);
+
+        int size = history.size();
+
+        if (size <= limit) {
+            return history;
+        }
+
+        return history.subList(size - limit, size);
+    }
+
+    public static void clearAll(ServerLevel level) {
+        getData(level).clearAll();
+    }
+
+    public static int size(ServerLevel level) {
+        return getData(level).size();
+    }
     private static String playerId(ServerPlayer player) {
-        Objects.requireNonNull(player, "player");
+        Objects.requireNonNull(player);
         return "player:" + player.getUUID();
     }
 }
